--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "webpack-get-started",
+  "name": "es6-komigang",
   "version": "0.0.1",
-  "description": "Get started with webpack",
+  "description": "Kom i gang med ES6 ved hjelp av webpack og Babel",
   "main": "webpack.config.js",
   "dependencies": {},
   "devDependencies": {
