--- a/package.json
+++ b/package.json
@@ -3,15 +3,24 @@
   "version": "0.0.1",
   "description": "Kom i gang med ES6 ved hjelp av webpack og Babel",
   "main": "webpack.config.js",
-  "dependencies": {},
+  "scripts": {
+    "dev": "./node_modules/.bin/webpack-dev-server --progress --colors",
+    "test": "./node_modules/.bin/karma start"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.1.19",
+    "babel-runtime": "^6.1.18"
+  },
   "devDependencies": {
     "autoprefixer-loader": "^3.1.0",
-    "babel-core": "^6.0.20",
-    "babel-eslint": "^4.1.4",
-    "babel-loader": "^6.0.1",
-    "babel-preset-es2015": "^6.0.15",
-    "css-loader": "^0.21.0",
-    "eslint": "^1.8.0",
+    "babel-core": "^6.1.21",
+    "babel-eslint": "^4.1.5",
+    "babel-loader": "^6.1.0",
+    "babel-plugin-transform-runtime": "^6.1.18",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-stage-0": "^6.1.18",
+    "css-loader": "^0.23.0",
+    "eslint": "^1.9.0",
     "eslint-loader": "^1.1.1",
     "jasmine": "^2.3.2",
     "jasmine-core": "^2.3.4",
@@ -22,19 +31,18 @@
     "karma-sourcemap-loader": "^0.3.6",
     "karma-spec-reporter": "0.0.22",
     "karma-webpack": "^1.7.0",
+    "node-sass": "^3.4.2",
     "phantomjs": "^1.9.18",
+    "sass-loader": "^3.1.1",
     "style-loader": "^0.13.0",
-    "webpack": "^1.12.2",
+    "webpack": "^1.12.6",
     "webpack-dev-server": "^1.12.1"
-  },
-  "scripts": {
-    "dev": "./node_modules/.bin/webpack-dev-server --progress --colors",
-    "test": "./node_modules/.bin/karma start"
   },
   "keywords": [
     "webpack",
     "es6",
-    "babel"
+    "babel",
+    "jasmine"
   ],
   "author": "LOL",
   "license": "ISC",
