--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "karma-spec-reporter": "0.0.22",
     "karma-webpack": "^1.7.0",
     "node-sass": "^3.4.2",
+    "null-loader": "^0.1.1",
     "phantomjs": "^1.9.18",
     "sass-loader": "^3.1.1",
     "style-loader": "^0.13.0",
