--- a/package.json
+++ b/package.json
@@ -5,23 +5,25 @@
   "main": "webpack.config.js",
   "scripts": {
     "dev": "./node_modules/.bin/webpack-dev-server --progress --colors",
-    "test": "./node_modules/.bin/karma start"
+    "test": "./node_modules/.bin/karma start",
+    "build": "./node_modules/.bin/webpack"
   },
   "dependencies": {
-    "babel-polyfill": "^6.1.19",
-    "babel-runtime": "^6.1.18"
+    "babel-polyfill": "^6.2.0",
+    "babel-runtime": "^6.2.0"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.1.0",
-    "babel-core": "^6.1.21",
+    "babel-core": "^6.2.1",
     "babel-eslint": "^4.1.5",
-    "babel-loader": "^6.1.0",
+    "babel-loader": "^6.2.0",
     "babel-plugin-transform-runtime": "^6.1.18",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-stage-0": "^6.1.18",
     "css-loader": "^0.23.0",
-    "eslint": "^1.9.0",
+    "eslint": "^1.10.1",
     "eslint-loader": "^1.1.1",
+    "extract-text-webpack-plugin": "^0.9.1",
     "file-loader": "^0.8.4",
     "jasmine": "^2.3.2",
     "jasmine-core": "^2.3.4",
@@ -38,14 +40,15 @@
     "sass-loader": "^3.1.1",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
-    "webpack": "^1.12.6",
+    "webpack": "^1.12.8",
     "webpack-dev-server": "^1.12.1"
   },
   "keywords": [
     "webpack",
     "es6",
     "babel",
-    "jasmine"
+    "jasmine",
+    "sass"
   ],
   "author": "LOL",
   "license": "ISC",
