--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "babel-runtime": "^6.2.0"
   },
   "devDependencies": {
-    "autoprefixer-loader": "^3.1.0",
+    "autoprefixer": "^6.1.0",
     "babel-core": "^6.2.1",
     "babel-eslint": "^4.1.5",
     "babel-loader": "^6.2.0",
@@ -37,6 +37,7 @@
     "node-sass": "^3.4.2",
     "null-loader": "^0.1.1",
     "phantomjs": "^1.9.18",
+    "postcss-loader": "^0.8.0",
     "sass-loader": "^3.1.1",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
