--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-stage-0": "^6.1.18",
     "css-loader": "^0.23.0",
+    "es6-promise": "^3.0.2",
     "eslint": "^1.10.1",
     "eslint-loader": "^1.1.1",
     "extract-text-webpack-plugin": "^0.9.1",
