--- a/package.json
+++ b/package.json
@@ -4,25 +4,24 @@
   "description": "Kom i gang med ES6 ved hjelp av webpack og Babel",
   "main": "webpack.config.js",
   "scripts": {
-    "dev": "./node_modules/.bin/webpack-dev-server --progress --colors",
+    "dev": "./node_modules/.bin/webpack-dev-server --progress --colors --hot",
     "test": "./node_modules/.bin/karma start",
     "build": "./node_modules/.bin/webpack"
   },
   "dependencies": {
-    "babel-polyfill": "^6.2.0",
-    "babel-runtime": "^6.2.0"
+    "babel-polyfill": "^6.2.4",
+    "babel-runtime": "^6.2.4"
   },
   "devDependencies": {
     "autoprefixer": "^6.1.0",
-    "babel-core": "^6.2.1",
+    "babel-core": "^6.2.4",
     "babel-eslint": "^4.1.5",
     "babel-loader": "^6.2.0",
-    "babel-plugin-transform-runtime": "^6.1.18",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-stage-0": "^6.1.18",
+    "babel-plugin-transform-runtime": "^6.2.4",
+    "babel-preset-es2015": "^6.2.4",
+    "babel-preset-stage-0": "^6.2.4",
     "css-loader": "^0.23.0",
-    "es6-promise": "^3.0.2",
-    "eslint": "^1.10.1",
+    "eslint": "^1.10.2",
     "eslint-loader": "^1.1.1",
     "extract-text-webpack-plugin": "^0.9.1",
     "file-loader": "^0.8.4",
