--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "Kom i gang med ES6 ved hjelp av webpack og Babel",
   "main": "webpack.config.js",
   "scripts": {
-    "dev": "./node_modules/.bin/webpack-dev-server --progress --colors --hot",
-    "test": "./node_modules/.bin/karma start",
-    "build": "./node_modules/.bin/webpack"
+    "dev": "./node_modules/.bin/webpack-dev-server --hot --inline --module-bind --progress --color",
+    "build": "./node_modules/.bin/webpack",
+    "test": "./node_modules/.bin/karma start"
   },
   "dependencies": {
     "babel-polyfill": "^6.2.0",
-    "babel-runtime": "^6.2.0"
+    "babel-runtime": "^6.2.0",
+    "moment": "^2.10.6"
   },
   "devDependencies": {
     "autoprefixer": "^6.1.1",
@@ -21,6 +22,7 @@
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-stage-0": "^6.1.18",
     "css-loader": "^0.23.0",
+    "es6-promise": "^3.0.2",
     "eslint": "^1.10.2",
     "eslint-loader": "^1.1.1",
     "extract-text-webpack-plugin": "^0.9.1",
