--- a/package.json
+++ b/package.json
@@ -9,27 +9,27 @@
     "test": "./node_modules/.bin/karma start"
   },
   "dependencies": {
-    "babel-polyfill": "^6.2.0",
-    "babel-runtime": "^6.2.0",
+    "babel-polyfill": "^6.3.14",
+    "babel-runtime": "^6.3.13",
     "moment": "^2.10.6"
   },
   "devDependencies": {
-    "autoprefixer": "^6.1.1",
-    "babel-core": "^6.2.1",
-    "babel-eslint": "^4.1.6",
+    "autoprefixer": "^6.1.2",
+    "babel-core": "^6.3.15",
+    "babel-eslint": "4.1.6 ",
     "babel-loader": "^6.2.0",
-    "babel-plugin-transform-runtime": "^6.1.18",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-stage-0": "^6.1.18",
+    "babel-plugin-transform-runtime": "^6.3.13",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
     "css-loader": "^0.23.0",
     "es6-promise": "^3.0.2",
-    "eslint": "^1.10.2",
+    "eslint": "^1.10.3",
     "eslint-loader": "^1.1.1",
     "extract-text-webpack-plugin": "^0.9.1",
     "file-loader": "^0.8.5",
     "html-loader": "^0.4.0",
-    "jasmine": "^2.3.2",
-    "jasmine-core": "^2.3.4",
+    "jasmine": "^2.4.1",
+    "jasmine-core": "^2.4.1",
     "karma": "^0.13.15",
     "karma-coverage": "^0.5.3",
     "karma-jasmine": "^0.3.6",
