--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "./node_modules/.bin/webpack-dev-server --hot --inline --module-bind --progress --color",
     "build": "NODE_ENV=production ./node_modules/.bin/webpack --progress --profile --colors",
+    "dist": "NODE_ENV=production ./node_modules/.bin/webpack --progress --profile --colors -p",
     "test": "./node_modules/.bin/karma start"
   },
   "dependencies": {
