--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "babel-polyfill": "^6.3.14",
     "babel-runtime": "^6.3.13",
+    "core-decorators": "^0.9.1",
     "moment": "^2.10.6"
   },
   "devDependencies": {
