--- a/package.json
+++ b/package.json
@@ -13,29 +13,29 @@
     "babel-polyfill": "^6.3.14",
     "babel-runtime": "^6.3.19",
     "es6-promise": "^3.0.2",
-    "moment": "^2.10.6"
+    "moment": "^2.11.1"
   },
   "devDependencies": {
-    "autoprefixer": "^6.2.3",
-    "babel-core": "^6.3.26",
-    "babel-eslint": "4.1.6 ",
-    "babel-loader": "^6.2.0",
-    "babel-plugin-transform-runtime": "^6.3.13",
+    "autoprefixer": "^6.3.1",
+    "babel-core": "^6.4.5",
+    "babel-eslint": "5.0.0-beta6",
+    "babel-loader": "^6.2.1",
+    "babel-plugin-transform-runtime": "^6.4.3",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "css-loader": "^0.23.1",
     "eslint": "^1.10.3",
-    "eslint-loader": "^1.1.1",
-    "extract-text-webpack-plugin": "^0.9.1",
+    "eslint-loader": "^1.2.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "html-loader": "^0.4.0",
     "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
-    "karma": "^0.13.15",
+    "karma": "^0.13.19",
     "karma-coverage": "^0.5.3",
     "karma-jasmine": "^0.3.6",
-    "karma-phantomjs-launcher": "^0.2.1",
-    "karma-sourcemap-loader": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.2.3",
+    "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.23",
     "karma-webpack": "^1.7.0",
     "node-sass": "^3.4.2",
@@ -46,8 +46,8 @@
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
+    "webpack": "^1.12.11",
+    "webpack-dev-server": "^1.14.1"
   },
   "keywords": [
     "webpack",
